20010815
 - (bal) Fixed stray code in readconf.c that went in by mistake.
 - OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/08/07 10:37:46
     [authfd.c authfd.h]
     extended failure messages from galb@vandyke.com
   - deraadt@cvs.openbsd.org 2001/08/08 07:16:58
     [scp.1]
     when describing the -o option, give -o Protocol=1 as the specific example
     since we are SICK AND TIRED of clueless people who cannot have difficulty
     thinking on their own.
   - markus@cvs.openbsd.org 2001/08/08 18:20:15
     [uidswap.c]
     permanently_set_uid is a noop if user is not privilegued;
     fixes bug on solaris; from sbi@uchicago.edu
   - markus@cvs.openbsd.org 2001/08/08 21:34:19
     [uidswap.c]
     undo last change; does not work for sshd
   - jakob@cvs.openbsd.org 2001/08/11 22:51:27
     [ssh.c tildexpand.c]
     fix more paths beginning with "//"; <bradshaw@staff.crosswalk.com>. 
     ok markus@
   - stevesk@cvs.openbsd.org 2001/08/13 23:38:54
     [scp.c]
     don't need main prototype (also sync with rcp); ok markus@
   - markus@cvs.openbsd.org 2001/08/14 09:23:02
     [sftp.1 sftp-int.c]
     "bye"; hk63a@netscape.net
   - stevesk@cvs.openbsd.org 2001/08/14 17:54:29
     [scp.1 sftp.1 ssh.1]
     consistent documentation and example of ``-o ssh_option'' for sftp and
     scp; document keyword=argument for ssh.
 - (bal) QNX resync.   OK tim@

20010814
 - (stevesk) sshpty.c, cray.[ch]: whitespace, formatting and cleanup
   for some #ifdef _CRAY code; ok wendyp@cray.com
 - (stevesk) sshpty.c: return 0 on error in cray pty code;
   ok wendyp@cray.com
 - (stevesk) bsd-cray.c: utmp strings are not C strings
 - (stevesk) bsd-cray.c: more cleanup; ok wendyp@cray.com

20010812
 - (djm) Fix detection of long long int support. Based on patch from 
   Michael Stone <mstone@cs.loyola.edu>. ok stevesk, tim

20010808
 - (bal) Minor correction to inet_ntop.h.  _BSD_RRESVPORT_H should be
   _BSD_INET_NTOP_H.  Pointed out by Mark Miller <markm@swoon.net> 

20010807